syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  UserData user = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string role = 4;
}

message RegisterResponse {
  string token = 1;
  UserData user = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool isValid = 1;
  UserData user = 2;
}

message GetUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message GetUsersResponse {
  repeated UserData users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message GetUserByIdRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
}

message UserResponse {
  UserData user = 1;
}

message UserData {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  string createdAt = 5;
  string updatedAt = 6;
} 