syntax = "proto3";

package event;

service EventService {
  rpc GetEvents (GetEventsRequest) returns (GetEventsResponse);
  rpc GetEventDetail (GetEventDetailRequest) returns (EventDetail);
  rpc GetEventRewards (GetEventRewardsRequest) returns (GetEventRewardsResponse);
  rpc CreateEvent (CreateEventRequest) returns (EventDetail);
  rpc UpdateEvent (UpdateEventRequest) returns (EventDetail);
  rpc CreateReward (CreateRewardRequest) returns (CreateRewardResponse);
  rpc UpdateReward (UpdateRewardRequest) returns (RewardDetail);
  rpc RequestReward (RequestRewardRequest) returns (RequestRewardResponse);
  rpc GetRewardHistory (GetRewardHistoryRequest) returns (GetRewardHistoryResponse);
  rpc InviteFriend (InviteFriendRequest) returns (InviteFriendResponse);
  rpc CheckAttendance (CheckAttendanceRequest) returns (CheckAttendanceResponse);
  rpc RequestParticipationReward (RequestParticipationRewardRequest) returns (RequestParticipationRewardResponse);
}

message GetEventsRequest {
}

message GetEventsResponse {
  repeated EventSummary events = 1;
}

message EventSummary {
  string id = 1;
  string title = 2;
  string description = 3;
  string startDate = 4;
  string endDate = 5;
  string imageUrl = 6;
  string status = 7;
  string createdBy = 8;
  string createdAt = 9;
  string updatedAt = 10;
}

message GetEventDetailRequest {
  string id = 1;
}

message EventDetail {
  string id = 1;
  string title = 2;
  string description = 3;
  string startDate = 4;
  string endDate = 5;
  string imageUrl = 6;
  string status = 7;
  string createdBy = 8;
  repeated RewardDetail rewards = 9;
  string createdAt = 10;
  string updatedAt = 11;
}

message GetEventRewardsRequest {
  string eventId = 1;
}

message GetEventRewardsResponse {
  repeated RewardDetail rewards = 1;
}

message RewardDetail {
  string id = 1;
  string eventId = 2;
  string name = 3;
  string description = 4;
  int32 quantity = 5;
  int32 remainingQuantity = 6;
  string imageUrl = 7;
  string rewardType = 8;
  string rewardValue = 9;
  string status = 10;
  string createdAt = 11;
  string updatedAt = 12;
}

message UserData {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
}

message CreateEventRequest {
  EventData eventData = 1;
  UserData user = 2;
}

message EventData {
  string title = 1;
  string description = 2;
  string startDate = 3;
  string endDate = 4;
  string imageUrl = 5;
  string status = 6;
}

message UpdateEventRequest {
  string eventId = 1;
  EventData eventData = 2;
  UserData user = 3;
}

message CreateRewardRequest {
  string eventId = 1;
  repeated RewardData rewardData = 2;
  UserData user = 3;
}

message RewardData {
  string name = 1;
  string description = 2;
  int32 quantity = 3;
  string imageUrl = 4;
  string rewardType = 5;
  string rewardValue = 6;
  string status = 7;
}

message CreateRewardResponse {
  repeated RewardDetail rewards = 1;
}

message UpdateRewardRequest {
  string id = 1;
  string eventId = 2;
  RewardData rewardData = 3;
  UserData user = 4;
}

message RequestRewardRequest {
  string eventId = 1;
  string userId = 2;
  UserData user = 3;
}

message RequestRewardResponse {
  bool success = 1;
  string message = 2;
  RewardDetail reward = 3;
}

message GetRewardHistoryRequest {
  string userId = 1;
  UserData user = 2;
}

message GetRewardHistoryResponse {
  repeated RewardHistoryItem rewards = 1;
}

message RewardHistoryItem {
  string id = 1;
  string userId = 2;
  string eventId = 3;
  string rewardId = 4;
  string eventName = 5;
  string rewardName = 6;
  string rewardType = 7;
  string rewardValue = 8;
  string status = 9;
  string createdAt = 10;
}

message InviteFriendRequest {
  InviteFriendData inviteData = 1;
  UserData user = 2;
}

message InviteFriendData {
  string friendEmail = 1;
}

message InviteFriendResponse {
  bool success = 1;
  string message = 2;
}

message CheckAttendanceRequest {
  UserData user = 1;
}

message CheckAttendanceResponse {
  bool success = 1;
  string message = 2;
}

message RequestParticipationRewardRequest {
  ParticipationRewardData requestData = 1;
  UserData user = 2;
}

message ParticipationRewardData {
  string eventId = 1;
  string participationType = 2;
}

message RequestParticipationRewardResponse {
  bool success = 1;
  string message = 2;
  RewardDetail reward = 3;
} 